[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/adventures/AdventurePlayer.gd" type="Script" id=1]
[ext_resource path="res://src/adventures/AdventureDisplay.gd" type="Script" id=2]

[node name="AdventureDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="."]
margin_top = 25.0
margin_right = 116.0
margin_bottom = 39.0
text = "Main Display Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_top = 79.0
margin_right = 12.0
margin_bottom = 99.0
text = "Button 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 116.0
margin_top = 79.0
margin_right = 183.0
margin_bottom = 99.0
text = "Button 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" type="Button" parent="."]
margin_top = 134.0
margin_right = 42.0
margin_bottom = 154.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdventurePlayer" type="Node" parent="."]
script = ExtResource( 1 )
source_file = "res://src/data/test_advent.json"
[connection signal="button_down" from="Button" to="AdventurePlayer" method="_on_Button_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="AdventurePlayer" method="_on_Button2_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="ButtonBack" to="." method="_on_ButtonBack_button_down"]
[connection signal="adventure_scene_loaded" from="AdventurePlayer" to="." method="_on_ScenePlayer_adventure_scene_loaded"]
